align top article header's content, fixes #10520
git-svn-id: svn://develop.studip.de/studip/trunk@57073 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/less/article.less
+++ b/resources/assets/stylesheets/less/article.less
@@ -40,7 +40,7 @@ article.studip {
 
             > a {
                 display: flex;
-                align-items: center;
+                align-items: top;
             }
 
             &,
@@ -48,6 +48,7 @@ article.studip {
                 > img,
                 > svg {
                     margin-right: 5px;
+                    margin-top: 2px;
                 }
             }
         }
@@ -83,6 +84,7 @@ article.studip {
                 &::before {
                     flex: 1 0 auto;
                     margin-right: 5px;
+                    margin-top: 2px;
                     transition: all 200ms ease 0s;
                 }
             }
